# dashboard_cientifico

./: .gitignore  README.md  activar_env.bat  datos_agrupados.json  ejecucion.bat  pyproject.toml  requirements.txt
.streamlit/: config.toml
dash/: asgi.py  settings.py  urls.py  wsgi.py
dashboard_cientifico/aplicacion/: Inicio.py  avanzada.py  basica.py  main.py  main1.py  pspm.py  pspm1.py  pspm_carga_ids.py  pspm_ver_st_session.py  tree.txt
dashboard_cientifico/aplicacion/config/: config_streamlit.py  settings.py
dashboard_cientifico/aplicacion/controlador/: app_dashboard.py  controlador.py  menu_cli.py  pspm.py
dashboard_cientifico/aplicacion/modelo/: carga_datos.py  carga_datos2.py  funciones_graficos.py  utiles.py
dashboard_cientifico/aplicacion/pages/: 1_Dashboard.py  2_Análisis.py  2_Datos.py  3_Análisis.py  3_Datos.py  4_Gestión.py
dashboard_cientifico/aplicacion/vista/: vista.py  vista_cli.py  vista_graficos.py  vista_menu.py
dashboard_cientifico/archivos/: carga_ids.json  datos_covid06_junio_2021.csv  datos_covid07_julio_2021.csv  datos_covid09_septiembre_2021.csv  ine_ccaa.csv  proyecto_final.md
dashboard_cientifico/copia_archivos/: comunidades_autonomas.geojson  datos_covid05_original.csv  datos_covid12_diciembre_2021.csv
dashboard_cientifico/descargas/: datos_covid.json  datos_eliminados.json  datos_exportados.csv
dashboard_cientifico/repositorio_archivos/: datos_covid08_agosto_2021.csv  datos_covid11_noviembre_2021.csv
dashboard_cientifico/z_generacion/: datos_covid_octubre_2021.csv  generacion_datos.py
tests/: test_modelo.py
(+4 files in other folders)
